# vidz

./: .anjuta_sym_db.db  ChangeLog  Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  config.h  config.status  configure  configure.ac  libtool  vidz.desktop  vidz.desktop.in
.anjuta/session/: anjuta.session  dock-layout.xml
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
pixmaps/: Makefile  Makefile.am  Makefile.am~  Makefile.in
po/: Makefile  Makefile.in
src/: #vidz.ui#  Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  database.c  database.h  gui.c  gui.h  main.c  threads.c  threads.h  vidz  vidz.c  vidz.c~  vidz.h  vidz.h~  vidz.ui  vidz_manager.c  vidz_manager.h  vidz_movieinfo.c  vidz_movieinfo.c~  vidz_movieinfo.h
src/.deps/: callbacks.Po  database.Po  gui.Po  main.Po  threads.Po  vidz.Po  vidz_manager.Po  vidz_movieinfo.Po
